--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -47,6 +47,7 @@ a:hover {
 	display: flex;
 	justify-content: space-around;
 	box-shadow: var(--grey) 0px 5px 10px 2px;
+	margin-bottom: 150px;
 }
 
 #cardName {
@@ -108,6 +109,35 @@ a:hover {
 	justify-content: center;
 }
 
+.servicesImages {
+	overflow: hidden;
+}
+
+#search-media::placeholder {
+	color: white;
+}
+
+#search-media {
+	color: white;
+	padding: 0px 20px 0px 20px;
+}
+
+.clearTypes {
+	width: 304px;
+	height: 41px;
+	text-align: left;
+	padding: 8px 16px 8px 16px;
+	background-color: #5c5c5c;
+}
+
+.clearBrands {
+	width: 200px;
+	height: 58px;
+	padding: 16px;
+	background-color: #5c5c5c;
+	margin: 0;
+}
+
 @media (max-width: 992px) {
 	.navbar-collapse {
 		background-color: #323338;
@@ -142,9 +172,15 @@ a:hover {
 	.vr {
 		display: none;
 	}
+	.servicesMedia {
+		flex-direction: column;
+	}
+	.footerMediaClear {
+		display: none;
+	}
+	iframe {
+		width: 100px;
+		height: 100px;
+		margin-right: 50px;
+	}
 }
-
-.servicesImages {
-	overflow: hidden;
-}
-
